# ai-engineering-workspace

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_seed_demo_data.py  0003_repository_snapshots.py  0004_ai_pr_governance.py
apps/api/src/ai_workspace_api/: main.py
apps/api/src/ai_workspace_api/core/: cache.py  config.py  database.py  dependencies.py  errors.py  logging.py  models.py  pagination.py  permissions.py  repository_scope.py  security.py  telemetry.py
apps/api/src/ai_workspace_api/infrastructure/: embedding.py  github.py  llm.py  queue.py  storage.py  vector_store.py
apps/api/src/ai_workspace_api/modules/auth/: router.py  schemas.py  service.py
apps/api/src/ai_workspace_api/modules/chat/: router.py  schemas.py  service.py
apps/api/src/ai_workspace_api/modules/docs/: router.py  schemas.py  service.py
apps/api/src/ai_workspace_api/modules/health/: router.py
apps/api/src/ai_workspace_api/modules/indexing/: chunking.py  file_filter.py  router.py  schemas.py  service.py
apps/api/src/ai_workspace_api/modules/pull_requests/: diff_parser.py  explainability.py  risk.py  (+5 more)
apps/api/src/ai_workspace_api/workers/: main.py
apps/api/tests/: test_chunking.py  test_embedding.py  test_file_filter.py  test_health.py  test_indexing.py  test_llm.py  test_permissions.py  test_pull_request_governance.py  test_repository_scope.py  test_security.py  test_worker_jobs.py
(+70 files in other folders)
