[project]
name = "ai-workspace-api"
version = "0.1.0"
description = "FastAPI backend for a production-grade AI software engineering workspace"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.4.3",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "boto3>=1.34.140",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "google-generativeai>=0.7.2",
  "openai>=1.35.0",
  "httpx>=0.27.0",
  "langchain-google-genai>=1.0.8",
  "langchain-openai>=0.1.17",
  "langgraph>=0.1.8",
  "passlib[bcrypt]>=1.7.4",
  "pathspec>=0.12.1",
  "pgvector>=0.3.2",
  "prometheus-client>=0.20.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.7",
  "slowapi>=0.1.9",
  "sqlalchemy[asyncio]>=2.0.31",
  "structlog>=24.2.0",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "anyio>=4.4.0",
  "coverage>=7.6.0",
  "httpx>=0.27.0",
  "mypy>=1.10.1",
  "pytest>=8.3.1",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
